fixing main container, white space on right side for some reaason

--- a/Typescript_Trivia/src/index.css
+++ b/Typescript_Trivia/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+#main-container {
+  width: 100vw;
+  height: 100vh;
+}
